--- a/VggQuickContainer/CMakeLists.txt
+++ b/VggQuickContainer/CMakeLists.txt
@@ -4,6 +4,7 @@ project(VggQuickContainer VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(QT_QML_OUTPUT_DIRECTORY  ${CMAKE_BINARY_DIR})
 
 find_package(Qt6 6.2 COMPONENTS Quick REQUIRED)
